code/src/index.css
body {
  margin: 20px;
  font-family: "Roboto Mono", monospace;
  box-sizing: border-box;
  background-color: #FFB6C1;
  display: flex;
  justify-content: center;
  align-items: center;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/********FORM PARTS**********/

form {
  border: 1px solid #000;
  width: 250px;
  background-color: #D4D3D3;
  padding: 10px;
  margin-bottom: 20px;
  box-shadow: 8px 8px;
  display: flex;
  flex-direction: column;
}

.header-text {
  font-size: 14px;
  font-weight: bold;
}

.input {
  height: 70px;
  margin-bottom: 13px;
  resize: vertical;
}

.form-button {
  background-color: #FFB6C1;
  border: none;
  border-radius: 25px;
  height: 40px;
  width: 206px;
  cursor: pointer;
}

/*******MESSAGE PART***********/

.message-container {
  border: 1px solid #000;
  background-color: #fff;
  width: 250px;
  padding: 10px;
  box-shadow: 8px 8px;
  margin-bottom: 20px;
  overflow-wrap: break-word;
}

.input-container {
  display: flex;
  justify-content: space-between;
}

button {
  border-radius: 50%;
  border: none;
  width: 40px;
  height: 40px;
  background-color: #FFB6C1;
  cursor: pointer;
}

button:hover {
  background-color: #E75480;
}

.zeroClicks {
  background-color: #D4D3D3;
}

.likes-container {
  display: flex;
  flex-direction: row;
}

.x-heart {
  font-size: 12px;
  padding-left: 5px;
}

.time {
  font-size: 12px;
}

.heart {
  padding: 5px;
}

.counter-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 14px;
}

@media screen and (min-width: 668px) {
  form {
    width: 400px;
  }
  .message-container {
    width: 400px;
  }
}

